flightdata/kubernates/springboot-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-app-a7a8e80b-ed76-4fc4-b5f2-21e73741e1f4
  namespace: 3219e62e-f28c-4e9a-b62e-77aae69fb44b
spec:
  replicas: 1
  selector:
    matchLabels:
      app: springboot-app-a7a8e80b-ed76-4fc4-b5f2-21e73741e1f4
  template:
    metadata:
      labels:
        app: springboot-app-a7a8e80b-ed76-4fc4-b5f2-21e73741e1f4
    spec:
      containers:
      - name: springboot
        image: ravi8881/3219e62e-f28c-4e9a-b62e-77aae69fb44b-70114ee3-7c51-40a6-af98-bd2ca53150ad-17cd568b-1349-4670-a8ae-53d47334febc-a7a8e80b-ed76-4fc4-b5f2-21e73741e1f4-graph:15.0.0
        ports:
        - containerPort: 8081
