flightdata/kubernates/springboot-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: springboot-ingress-a7a8e80b-ed76-4fc4-b5f2-21e73741e1f4
  namespace: 3219e62e-f28c-4e9a-b62e-77aae69fb44b
  annotations:
    ngrok.com/ingress-mode: edge
  labels:
    app: springboot-app-a7a8e80b-ed76-4fc4-b5f2-21e73741e1f4
spec:
  ingressClassName: nginx
  rules:
    - host: picked-apt-wombat.ngrok-free.app
      http:
        paths:
          - backend:
              service:
                name: springboot-service-a7a8e80b-ed76-4fc4-b5f2-21e73741e1f4
                port:
                  number: 80
            path: /graphiql
            pathType: Prefix
          - backend:
              service:
                name: springboot-service-a7a8e80b-ed76-4fc4-b5f2-21e73741e1f4
                port:
                  number: 80
            path: /graphql
            pathType: Prefix
